# Arquitectura-de-Computadores

./: README.md
Laboratorios/Lab 3/files_lab3/: aos-16  aos-32  aos-8  cg-aos-16.txt  cg-aos-32.txt  cg-aos-8.txt  cg-loop-merge-16.txt  cg-loop-merge-32.txt  cg-loop-merge-64.txt  cg-loop-merge-opt-16.txt  cg-loop-merge-opt-32.txt  cg-loop-merge-opt-64.txt  cg-soa-16.txt  cg-soa-32.txt  cg-soa-8.txt  loop-merge-16  loop-merge-32  loop-merge-64  loop-merge-opt-16  loop-merge-opt-32  loop-merge-opt-64  script.sh  slurm-8685.out  soa-16  soa-32  soa-8
Laboratorios/Lab 5/: bpred1.cpp  bpred2.cpp  bpred3.cpp  build.sh  exec.sh
Laboratorios/Lab 5/resultados avignon/: 3_2task.pbm  3_3task.pbm  3_4task.pbm  3_5task.pbm  slurm.out
Laboratorios/Lab 6/: Resultados.xlsx
Laboratorios/Lab 6/avignon/: counter_mutex.cpp  counter_spin_ra_opt.cpp
Practica-1/: CMakeLists.txt  avignonperf.sh  cmake_install.cmake
Practica-1/aos/: imageaos.cpp
Practica-1/common/: gethead.cpp  progargs.hpp
Practica-1/image-aos/: imgaos.cpp
Practica-1/resultados_avignon/: ener_aos_copy.pbm  ener_soa_copy.pbm  perf_aos_gauss.pbm  perf_soa_histo.pbm
Practica-2/image/: build.sh  perf_avignon.sh
Practica-2/image/results/: imgaos_gauss_ener_1_guided.perf  imgaos_gauss_ener_1_static.perf  imgaos_gauss_ener_2_dynamic.perf  imgaos_gauss_ener_2_static.perf  imgaos_gauss_ener_4_dynamic.perf  imgaos_gauss_ener_4_static.perf  imgaos_gauss_perf_16_dynamic.pbm  imgaos_gauss_perf_16_static.pbm  (+65 more)
p1/: CMakeCache.txt  CMakeLists.txt  Makefile  avignonperf.sh  build.sh  buildlinux.sh  energia.sh  perf.sh
p1/aos/: aos.h  aos.hpp  imageaos.cpp
p1/common/: gethead.cpp  gethead.hpp  progargs.cpp  progargs.hpp
p1/image-aos/: imgaos.cpp
p1/image-soa/: imgsoa.cpp
p1/resultados_avignon/: ener_aos_gauss.pbm  ener_aos_histo.pbm  ener_aos_mono.pbm  ener_soa_gauss.pbm  ener_soa_histo.pbm  ener_soa_mono.pbm  perf_aos_copy.pbm  perf_aos_histo.pbm  perf_aos_mono.pbm  perf_soa_copy.pbm  perf_soa_gauss.pbm  perf_soa_mono.pbm  slurm.out
p1/soa/: imagesoa.cpp  soa.h  soa.hpp
p2/image/: build_avignon_cmake.sh  make_script.sh  perf_avignon.sh
(+244 files in other folders)
