cmake_minimum_required(VERSION 3.23)
project(image LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS_OFF)
add_compile_options(-Wall -Wextra -Werror -pedantic -pedantic-errors)
set(CMAKE_CXX_FLAGS_RELEASE "-march=native")

include_directories("common")
include_directories("image-aos")
include_directories("image-soa")
include_directories("aos")
include_directories("soa")

add_library(common common/gethead.cpp common/progargs.cpp)
add_library(aos aos/imageaos.cpp)
add_library(soa soa/imagesoa.cpp)

add_executable(image-aos.o image-aos/imgaos.cpp common/progargs.hpp common/gethead.hpp aos/aos.hpp)
target_link_libraries(image-aos.o common aos)
add_executable(image-soa.o image-soa/imgsoa.cpp common/progargs.hpp common/gethead.hpp soa/soa.hpp)
target_link_libraries(image-soa.o common soa)