cmake_minimum_required(VERSION 3.23)
project(image LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS_OFF)
add_compile_options(-Wall -Wextra -Werror -pedantic -pedantic-errors)
set(CMAKE_CXX_FLAGS_RELEASE "-march=native")
add_library(common ?le1-common.cpp ?le2-common.cpp ?le3-common.cpp)
add_library(aos ?le1-aos.cpp ?le2-aos.cpp)
add_library(soa ?le1-soa.cpp ?le2-soa.cpp)
add_executable(image-aos imgaos.cpp)
target_link_libraries(imgaos common aos)
add_executable(imgsoa image-soa.cpp)
target_link_libraries(imgsoa common soa)