cmake_minimum_required(VERSION 3.23)
project(image LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS_OFF)
add_compile_options(-Wall -Wextra -Werror -pedantic -pedantic-errors)
set(CMAKE_CXX_FLAGS_RELEASE "-march=native")

add_library(common gethead.cpp progargs.cpp)
add_library(aos imageaos.cpp)
add_library(soa imagesoa.cpp)

add_executable(image_aos imgaos.cpp)
target_link_libraries(image_aos common aos)
add_executable(image_soa image-soa.cpp)
target_link_libraries(image_soa common soa)